[package]
name = "hatchling"
version = "0.1.0"
authors = ["Sean McBride <spmcbride1201@gmail.com>"]
edition = "2018"
description = "Converts Facebook social media data exported via the Download Your Information tool (https://www.facebook.com/settings) into Turtle triplets for a SOLID (https://solid.mit.edu/) profile"
repository = "https://github.com/bushidocodes/hatchling"
readme = "./README.md"
keywords = ["rdf", "linked-data", "turtle", "solid", "facebook"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
rdf = "0.1.4"
chrono = "0.4.9"
clap = "2.33.0"