[package]
name = "hatchling"
version = "0.1.0"
authors = ["Sean McBride <spmcbride1201@gmail.com>"]
edition = "2021"
description = "Converts Facebook social media data exported via the Download Your Information tool (https://www.facebook.com/settings) into Turtle triplets for a SOLID (https://solid.mit.edu/) profile"
repository = "https://github.com/bushidocodes/hatchling"
readme = "./README.md"
keywords = ["rdf", "linked-data", "turtle", "solid", "facebook"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
